--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/react-redux": "^4.4.46",
+    "@types/react-router-dom": "^4.0.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.2"
   },
   "scripts": {
