--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^15.5.1",
     "@types/react-redux": "^4.4.46",
     "@types/react-router-dom": "^4.0.7",
+    "core-decorators": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
