--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "sweetalert2": "^6.6.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
