--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/redux-devtools": "^3.0.38",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
@@ -40,12 +41,14 @@
     "whatwg-fetch": "2.0.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^20.0.4",
     "@types/node": "^8.0.14",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/react-redux": "^4.4.46",
     "@types/react-router-dom": "^4.0.7",
+    "axios": "^0.16.2",
     "core-decorators": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
