--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^15.5.1",
     "@types/react-redux": "^4.4.46",
     "@types/react-router-dom": "^4.0.7",
+    "@types/redux-actions": "^1.2.7",
     "axios": "^0.16.2",
     "core-decorators": "^0.19.0",
     "react": "^15.6.1",
@@ -55,6 +56,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "sweetalert2": "^6.6.6"
   },
   "scripts": {
