--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/redux-devtools": "^3.0.38",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
@@ -23,6 +24,7 @@
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^2.0.1",
     "react-error-overlay": "^1.0.6",
+    "redux-devtools": "^3.4.0",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
@@ -39,18 +41,22 @@
     "whatwg-fetch": "2.0.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^20.0.4",
     "@types/node": "^8.0.14",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/react-redux": "^4.4.46",
     "@types/react-router-dom": "^4.0.7",
+    "@types/redux-actions": "^1.2.7",
+    "axios": "^0.16.2",
     "core-decorators": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "sweetalert2": "^6.6.6"
   },
   "scripts": {
