--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sweetalert2": "^7.8.6"
   },
