feat(apple): add apple

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.17.1",
     "core-decorators": "^0.20.0",
     "cross-fetch": "^1.1.1",
+    "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
