--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "axios": "^0.17.1",
     "core-decorators": "^0.20.0",
     "cross-fetch": "^1.1.1",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
