--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-solid": "^5.0.7",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "@types/axios": "^0.14.0",
     "@types/jest": "^22.1.1",
     "@types/node": "^9.4.0",
