--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "redux-thunk": "^2.2.0",
     "rxjs": "^5.5.6",
     "sweetalert2": "^7.8.6"
